auto-value bindings