@@ -16,27 +16,27 @@
 
 package dagger.internal.codegen.base;
 
+import static dagger.internal.codegen.xprocessing.XConverters.toJavac;
+import static io.jbock.auto.common.MoreTypes.asDeclared;
+import static io.jbock.auto.common.MoreTypes.isType;
+import static dagger.internal.codegen.base.Preconditions.checkArgument;
 import static dagger.internal.codegen.javapoet.TypeNames.lazyOf;
 import static dagger.internal.codegen.javapoet.TypeNames.providerOf;
 import static dagger.internal.codegen.langmodel.DaggerTypes.checkTypePresent;
 import static dagger.internal.codegen.langmodel.DaggerTypes.isTypeOf;
 import static dagger.internal.codegen.langmodel.DaggerTypes.unwrapType;
-import static dagger.internal.codegen.xprocessing.XConverters.toJavac;
 import static dagger.spi.model.RequestKind.LAZY;
 import static dagger.spi.model.RequestKind.PROVIDER;
 import static dagger.spi.model.RequestKind.PROVIDER_OF_LAZY;
-import static io.jbock.auto.common.MoreTypes.asDeclared;
-import static io.jbock.auto.common.MoreTypes.isType;
 import static javax.lang.model.type.TypeKind.DECLARED;
 
-import dagger.internal.codegen.javapoet.TypeNames;
-import dagger.internal.codegen.langmodel.DaggerTypes;
 import dagger.internal.codegen.xprocessing.XType;
-import dagger.spi.model.RequestKind;
-import dagger.spi.model.Key;
+import dagger.internal.codegen.collect.ImmutableMap;
 import io.jbock.javapoet.ClassName;
 import io.jbock.javapoet.TypeName;
-import java.util.Map;
+import dagger.internal.codegen.javapoet.TypeNames;
+import dagger.internal.codegen.langmodel.DaggerTypes;
+import dagger.spi.model.RequestKind;
 import javax.lang.model.type.TypeMirror;
 
 /** Utility methods for {@link RequestKind}s. */
@@ -53,7 +53,7 @@ public final class RequestKinds {
         return types.wrapType(requestType(LAZY, type, types), TypeNames.PROVIDER);
 
       default:
-        return types.wrapType(type, frameworkClass(requestKind));
+        return types.wrapType(type, frameworkClassName(requestKind));
     }
   }
 
@@ -77,8 +77,8 @@ public final class RequestKinds {
     }
   }
 
-  private static final Map<RequestKind, ClassName> FRAMEWORK_CLASSES =
-      Map.of(
+  private static final ImmutableMap<RequestKind, ClassName> FRAMEWORK_CLASSES =
+      ImmutableMap.of(
           PROVIDER, TypeNames.PROVIDER,
           LAZY, TypeNames.LAZY);
 
@@ -91,14 +91,14 @@ public final class RequestKinds {
   public static RequestKind getRequestKind(TypeMirror type) {
     checkTypePresent(type);
     if (!isType(type) // TODO(b/147320669): isType check can be removed once this bug is fixed.
-        || !type.getKind().equals(DECLARED)
-        || asDeclared(type).getTypeArguments().isEmpty()) {
+            || !type.getKind().equals(DECLARED)
+            || asDeclared(type).getTypeArguments().isEmpty()) {
       // If the type is not a declared type (i.e. class or interface) with type arguments, then we
       // know it can't be a parameterized type of one of the framework classes, so return INSTANCE.
       return RequestKind.INSTANCE;
     }
     for (RequestKind kind : FRAMEWORK_CLASSES.keySet()) {
-      if (isTypeOf(frameworkClass(kind), type)) {
+      if (isTypeOf(frameworkClassName(kind), type)) {
         if (kind.equals(PROVIDER) && getRequestKind(unwrapType(type)).equals(LAZY)) {
           return PROVIDER_OF_LAZY;
         }
@@ -152,28 +152,43 @@ public final class RequestKinds {
       case PROVIDER_OF_LAZY:
         return extractKeyType(LAZY, extractKeyType(PROVIDER, type));
       default:
-        Preconditions.checkArgument(isType(type));
+        checkArgument(isType(type));
         return unwrapType(type);
     }
   }
 
   /**
    * A dagger- or {@code javax.inject}-defined class for {@code requestKind} that that can wrap
-   * another type but share the same {@link Key}.
+   * another type but share the same {@link dagger.spi.model.Key}.
    *
    * <p>For example, {@code Provider<String>} and {@code Lazy<String>} can both be requested if a
    * key exists for {@code String}; they all share the same key.
    *
    * <p>This concept is not well defined and should probably be removed and inlined into the cases
    * that need it. For example, {@link RequestKind#PROVIDER_OF_LAZY} has <em>2</em> wrapping
-   * classes.
+   * classes, and {@code RequestKind#FUTURE} is wrapped with a {@code ListenableFuture}, but for
+   * historical/implementation reasons has not had an associated framework class.
    */
-  public static ClassName frameworkClass(RequestKind requestKind) {
-    ClassName result = FRAMEWORK_CLASSES.get(requestKind);
-    Preconditions.checkArgument(result != null, "no framework class for %s", requestKind);
-    return result;
+  public static ClassName frameworkClassName(RequestKind requestKind) {
+    checkArgument(
+        FRAMEWORK_CLASSES.containsKey(requestKind), "no framework class for %s", requestKind);
+    return FRAMEWORK_CLASSES.get(requestKind);
   }
 
-  private RequestKinds() {
+  /**
+   * Returns {@code true} if requests for {@code requestKind} can be satisfied by a production
+   * binding.
+   */
+  public static boolean canBeSatisfiedByProductionBinding(RequestKind requestKind) {
+    switch (requestKind) {
+      case INSTANCE:
+      case PROVIDER:
+      case LAZY:
+      case PROVIDER_OF_LAZY:
+        return false;
+    }
+    throw new AssertionError();
   }
+
+  private RequestKinds() {}
 }
